--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,10 @@
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono" />
-<link rel="stylesheet" type="text/css" href="style.css">
-
-<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-
-<script src="../emulator/x86e.js"></script>
-<script src="app.js" type="text/babel"></script>
-
-<div id="root"></div>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="./src/index.tsx"></script>
+  </body>
+</html>
